fix(css): anchor links on mobile

--- a/src/styles/components/_navbar.sass
+++ b/src/styles/components/_navbar.sass
@@ -8,8 +8,9 @@
   background: transparent
 
   .home-page &
-    .c-navbar__collapse .c-navbar__nav:first-child .c-navbar__navItem a
-      color: white
+    @media(min-width: 768px)
+      .c-navbar__collapse .c-navbar__nav:first-child .c-navbar__navItem a
+        color: white
     img
       -webkit-filter: grayscale(100%) brightness(100)
       filter: grayscale(100%) brightness(100)
